@@ -8,7 +8,7 @@
 
 =head1 NAME
 
-Workout::Store - Base Class for Sports Workout data Stores
+Workout::Store - Memory storage for Workout data
 
 =head1 SYNOPSIS
 
@@ -27,7 +27,7 @@ Workout::Store - Base Class for Sports Workout data Stores
 	fields	=> [ 'ele' ],
   }); 
   # tmp copy for demonstration purpose
-  $mem = Workout::Store::Memory->new;
+  $mem = Workout::Store->new;
   $mem->from( $merge );
 
   # write to file, resample to new interval
@@ -45,8 +45,27 @@ monitors, Power meters, GPS receivers and so on.
 
 =cut
 
+
+package Workout::Store::Iterator;
+use strict;
+use warnings;
+use Carp;
+use base 'Workout::Iterator';
+
+sub process {
+	my( $self ) = @_;
+
+	my $dat = $self->store->{chunk};
+	return unless $self->{cntin} < @$dat;
+
+	$dat->[$self->{cntin}++];
+}
+
+
+
+
 # TODO: move documentation to Workout;
-# TODO: merge with Store::Memory, change Store::* to be input/output filter
+# TODO: rewrite Store::* as input/output filter
 
 package Workout::Store;
 
@@ -72,6 +91,25 @@ __PACKAGE__->mk_accessors(qw(
 
 	note
 ));
+
+=head2 new( $arg )
+
+=cut
+
+sub new {
+	my( $class, $a ) = @_;
+
+	$a ||= {};
+	my $self = $class->SUPER::new({
+		cap_block	=> 1,
+		cap_note	=> 1,
+		%$a,
+		chunk		=> [],
+		mark		=> [],
+	});
+
+	$self;
+}
 
 =head2 from( $iter )
 
@@ -160,9 +198,14 @@ return iterator to retrieve all chunks.
 
 =cut
 
-sub iterate { 
+sub iterate {
 	my( $self, $a ) = @_;
-	return; # not implemented
+
+	$a ||= {};
+	Workout::Store::Iterator->new( $self, {
+		%$a,
+		debug	=> $self->{debug},
+	});
 }
 
 sub all { 
@@ -172,39 +215,100 @@ sub all {
 	$iter->all;
 }
 
-sub chunk_first { 
-	return; # "not implemented"; 
+sub chunk_time2idx {
+	my( $self, $time ) = @_;
+
+	my $last = $#{$self->{chunk}};
+
+	# no data
+	return unless $last >= 0;
+
+	# after data
+	return $last if $time > $self->{chunk}[$last]->stime;
+
+	# perform quicksearch
+	$self->_chunk_time2idx( $time, 0, $last );
 }
 
-sub chunk_last { 
-	return; # "not implemented"; 
+# quicksearch
+sub _chunk_time2idx {
+	my( $self, $time, $idx1, $idx2 ) = @_;
+
+	return $idx1 if $time <= $self->{chunk}[$idx1]->time;
+	return $idx2 if $idx1 + 1 == $idx2;
+
+	my $split = int( ($idx1 + $idx2) / 2);
+	#$self->debug( "qsrch $idx1 $split $idx2" );
+
+	if( $time <= $self->{chunk}[$split]->time ){
+		return $self->_chunk_time2idx( $time, $idx1, $split );
+	}
+	return $self->_chunk_time2idx( $time, $split, $idx2 );
 }
 
-sub chunk_count { 
-	return 0; # "not implemented";
-};
+sub chunk_idx2time {
+	my( $self, $idx ) = @_;
+	if( $idx >= $self->chunk_count 
+		|| $idx < 0 ){
+
+		croak "index is out of range";
+	}
+	$self->{chunk}[$idx]->time;
+}
+
+sub chunks { $_[0]{chunk}; }
+sub chunk_count { scalar @{$_[0]{chunk}}; }
+sub chunk_first { $_[0]{chunk}[0]; }
+sub chunk_last { $_[0]{chunk}[-1]; }
 
 sub chunk_get_idx {
 	my( $self, $idx1, $idx2 ) = @_;
-	return; # "not implemented";
+
+	$idx2 ||= $idx1;
+	$idx1 <= $idx2
+		or croak "inverse index span";
+
+
+	@{$self->{chunk}}[$idx1 .. $idx2];
 }
 
 sub chunk_get_time {
-	my( $self, $from, $to ) = @_;
-	return; # "not implemented";
+	my( $self, $time1, $time2 ) = @_;
+
+	$time2 ||= $time1;
+	$time1 <= $time2
+		or croak "inverse time span";
+
+	$self->chunk_get_idx( 
+		$self->chunk_idx( $time1 ),
+		$self->chunk_idx( $time2 ),
+	);
+
 }
 
 sub chunk_del_idx {
-	my( $self, $from, $to ) = @_;
-	return; # "not implemented";
+	my( $self, $idx1, $idx2 ) = @_;
+
+	$idx2 ||= $idx1;
+	$idx1 <= $idx2
+		or croak "inverse index span";
+
+	# TODO: nuke marker outside the resulting time span
+	splice @{$self->{chunk}}, $idx1, $idx2-$idx1;
 }
 
 sub chunk_del_time {
-	my( $self, $from, $to ) = @_;
-	return; # "not implemented";
+	my( $self, $time1, $time2 ) = @_;
+
+	$time2 ||= $time1;
+	$time1 <= $time2
+		or croak "inverse time span";
+
+	$self->chunk_del_idx( 
+		$self->chunk_idx( $time1 ),
+		$self->chunk_idx( $time2 ),
+	);
 }
-
-
 
 =head2 chunk_add( $chunk )
 
@@ -221,10 +325,10 @@ sub chunk_add {
 }
 
 sub _chunk_add {
-	my( $self, $chunk ) = @_;
+	my( $self, $n ) = @_;
 
-	croak "not implemented";
-	#$self->chunk_check( $chunk, 1 );
+	$self->chunk_check( $n );
+	push @{$self->{chunk}}, $n;
 }
 
 =head2 chunk_check( $chunk, $inblock )
@@ -272,12 +376,15 @@ sub blocks {
 }
 
 
-sub marks { 
-	return; # "not implemented";
+
+sub marks {
+	my( $self ) = @_;
+	$self->{mark};
 }
 
 sub mark_count {
-	return; # "not implemented";
+	my( $self ) = @_;
+	scalar @{$self->{mark}};
 }
 
 sub mark_workout {
@@ -293,21 +400,17 @@ sub mark_workout {
 sub mark_new {
 	my( $self, $a ) = @_;
 	# TODO: ensure that marker time span is within chunk timespan
-	$self->_mark_add( Workout::Marker->new({
+	push @{$self->{mark}}, Workout::Marker->new({
 		%$a,
 		store	=> $self,
-	}) );	
-}
-
-sub _mark_add {
-	my( $self, $mark ) = @_;
-	croak "not implemented";
+	});
 }
 
 sub mark_del {
 	my( $self, $idx ) = @_;
-	return; # "not implemented";
+	splice @{$self->{mark}}, $idx, 1;
 }
+
 
 
 
@@ -325,12 +428,18 @@ sub time_add_delta {
 	}
 }
 
-sub time_start { 
-	return; # "not implemented";
+sub time_start {
+	my $self = shift;
+	my $c = $self->chunk_first
+		or return;
+	$c->stime;
 }
 
-sub time_end { 
-	return; # "not implemented";
+sub time_end {
+	my $self = shift;
+	my $c = $self->chunk_last
+		or return;
+	$c->time;
 }
 
 sub dur {
@@ -345,6 +454,10 @@ sub info {
 	$i;
 }
 
+
+
+
+
 1;
 __END__
 
@@ -357,3 +470,6 @@ Workout::Iterator
 Rainer Clasen
 
 =cut
+
+
+
